# MSc-Thesis

./: .gitignore  DESIGN.md  DOCS_INDEX.md  FIGURES_AND_METRICS.md  FRONTIER_REFRAME.md  HIERARCHICAL_EXPLAINED.md  HIER_FS_IMPL.md  HIER_MEASUREMENT_AND_PLOTS.md  HOWTO.md  Hierarchical_details_and_problems.md  ISOLATION_BENCHMARK.md  MOTIVATION_AND_OBJECTIONS.md  NARRATIVE_FRAMING.md  PROJECT_BLUEPRINT.md  SESSION_SUMMARY.md  SUPERVISOR_CALL_SUMMARY.md  Thesis_Outline.md  VARIANT_A_IMPLEMENTATION.md  supervisor_report_draft.md  thesis_guidelines_and_per_prover_parallel_mem_explained.md
bench_archive_2026-05-31/: README.md
data/: instance.json  path.json
docs/: CLEAN_REIMPLEMENTATION_GUIDE.md  COMMITTED_APPROACHES_REVIEW.typ  COMMITTED_APPROACHES_REVIEW_COMPACT.typ  CROSSREFS.md  CROSSREF_WORKFLOW.md  DESIGN.md  DESIGN_SPACE.md  DOCS_INDEX.md  FIGURES_AND_METRICS.md  FRONTIER_REFRAME.md  HIERARCHICAL_EXPLAINED.md  HIER_FS_IMPL.md  HIER_MEASUREMENT_AND_PLOTS.md  HOWTO.md  IMPLEMENTATION_CHOICES_DEFENCE.md  ISOLATION_BENCHMARK.md  MERKLE_LEAF_DESIGN.md  MOTIVATION_AND_OBJECTIONS.md  NARRATIVE_FRAMING.md  NARRATIVE_SCRIPT.md  RECURSION_COMPARISON_NOTES.md  RELATED_WORK.md  Recursive_inner_circuit_choice_explained.md  SOUNDNESS_AND_HIDING.md  SUPERVISOR_CALL_SUMMARY.md  Thesis_Outline.md  WHOLE_THESIS_DEFENCE_CHECKLIST.md  something_on_motivation_and_defense.md  supervisor_report_draft.md
export/pipeline/merkle_builder/: Cargo.toml
export/pipeline/merkle_builder/src/: main.rs
tests/hash_compat/rust/: Cargo.toml
tests/hash_compat/rust/src/: main.rs
(+276 files in other folders)
