[package]
name = "merkle_builder"
version = "0.1.0"
edition = "2021"

# Same noir monorepo tag as hash_compat so the FieldElement type is identical.
# Cargo resolves workspace-level deps (ark-bn254, ark-ff, ...) from the
# workspace root, so acir::FieldElement and the type expected by
# poseidon2_permutation are the same concrete type.
[dependencies]
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.20" }
acir = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.20" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
